Src/Resources/KtaneWeb.css
/* ... */
    #profiles > p.zip {
        font-size: 12pt;
        margin: 0 0 1.5em;
        text-align: center;
    }

    #profiles > div.wrapper {
        display: flex;
        flex-direction: row;
    }

        #profiles > div.wrapper > div {
            flex: 1;
            text-align: center;
        }

            #profiles > div.wrapper > div.defuser {
                margin-right: 1em;
                padding-right: 1em;
                border-right: 1px solid #ccc;
            }

            #profiles > div.wrapper > div > p {
                margin: 0;
                font-size: 11pt;
            }

            #profiles > div.wrapper > div > menu {
                list-style-type: none;
                padding: 0;
            }

                #profiles > div.wrapper > div > menu > li {
                    padding: 0;
                }

            #profiles > div.wrapper > div > p.explain {
                font-size: 8pt;
            }

/* Mobile interface only */
#page-opt, td.mobile-ui {
    display: none;
}

#main-table td.selectable {
    border-right: none;
    padding-right: 0;
    white-space: nowrap;
    width: 1px;
}

    #main-table td.selectable.last {
        padding-right: .7em;
    }

    #main-table td.selectable + td.selectable {
        border-left: none;
        padding-left: 0;
    }

#main-table th::after {
    font-size: 70%;
    font-weight: normal;
    color: black;
    text-decoration: none;
}

#main-table-container {
    clear: both;
    position: relative;
}

    #main-table-container #tabs {
        position: absolute;
        right: 0;
        bottom: 100%;
    }

        #main-table-container #tabs > .tab {
            display: inline-block;
            background: #eef;
            border: 1px solid #eef;
            border-bottom: none;
            border-top-color: #ccf;
            border-right-color: #ccf;
            border-right-width: 2px;
            border-top-left-radius: .5em;
            border-top-right-radius: .5em;
            text-decoration: none;
            color: #024;
            padding: .1em .5em;
            margin-left: .2em;
            vertical-align: bottom;
        }

#module-count {
    text-align: right;
}

#rule-seed {
    width: 19em;
    text-align: center;
}

    #rule-seed #rule-seed-input {
        width: 100px;
    }

    #rule-seed .ui {
        font-size: 14pt;
    }

    #rule-seed .explain {
        font-size: 10pt;
    }

#rule-seed-mobile {
    display: none;
}

/* Lay out the displays/themes/filters/selectables in a four-column way */
#filters {
    width: 42em;
}

    #filters > div.filters {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        height: 29em;
    }

        #filters > div.filters > div {
            padding: 0 1.3em;
        }

        #filters > div.filters #include-missing {
            margin-top: .5em;
        }

#more {
    width: 35em;
    padding: 2em;
}

    #more h3 {
        margin-bottom: 1em;
        border-bottom: 1px solid #aaa;
    }

    #more h4 {
        border-bottom: 1px solid #ccc;
    }

    #more li {
        margin: 1em 0;
    }

        #more li div.link-extra {
            margin-left: 1em;
            font-size: 10pt;
        }

    #more table {
        border: none;
        width: 100%;
    }

        #more table td, #more table th {
            border: none;
            text-align: left;
            vertical-align: top;
            padding: 0 0 .5em 0;
            box-sizing: border-box;
        }

        #more table th {
            padding-right: 1em;
        }

        #more table.file-locations input {
            width: 100%;
            box-sizing: border-box;
        }

        #more table.file-locations th {
            width: 1px;
            white-space: nowrap;
        }

    #more > ul.dev {
        margin: 0;
    }

    #more > .icon-credits {
        margin: 1.5em 0 .5em;
    }

    #more > .json {
        float: right;
        margin: 1.5em 0 .5em;
    }

div.popup {
    display: none;
    position: absolute;
    border: 2px solid black;
    padding: 10px;
    background: #fafaff;
    box-shadow: 5px 5px 5px rgba(0,0,0,.3);
}

    div.popup > div.close {
        display: none;
    }

    div.popup p.manual-select {
        font-size: 70%;
        margin: .1em .25em;
    }

        div.popup p.manual-select span.arrow {
            position: relative;
            top: .4em;
        }

    div.popup menu.manual-select {
        margin: 0;
        list-style: none;
        padding: .2em;
    }

        div.popup menu.manual-select li {
            padding: .25em .7em 0 1.4em;
            position: relative;
            cursor: pointer;
        }

            div.popup menu.manual-select li:hover {
                background: navy;
                color: white;
            }

            div.popup menu.manual-select li.checked:before {
                position: absolute;
                content: '✓';
                left: 0.3em;
                top: 50%;
                transform: translateY(-50%);
            }

    div.popup h3 {
        margin: 2em 0 .5em;
    }

    div.popup h4 {
        margin: 1em 0 .25em;
    }

.icons {
    text-align: center;
}

    .icons > .icon-page {
        display: none;
    }

        .icons > .icon-page.shown {
            display: inline;
        }

    .icons .icon {
        margin: 0 1em;
        position: relative;
        display: inline-block;
    }

        .icons .icon.mobile-only {
            display: none;
        }

        .icons .icon > .icon-link {
            color: #0000EE;
        }

            .icons .icon > .icon-link:visited {
                color: #551A8B;
            }

            .icons .icon > .icon-link button {
                width: 60px;
                border: none;
                background: none;
                padding: 0;
                margin: 0;
            }
/* ... */

